--- a/reddit.ipynb
+++ b/reddit.ipynb
@@ -2,29 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting praw\n",
-      "  Downloading praw-7.7.1-py3-none-any.whl (191 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m191.0/191.0 kB\u001b[0m \u001b[31m6.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting prawcore<3,>=2.1 (from praw)\n",
-      "  Downloading prawcore-2.4.0-py3-none-any.whl (17 kB)\n",
-      "Collecting update-checker>=0.18 (from praw)\n",
-      "  Downloading update_checker-0.18.0-py3-none-any.whl (7.0 kB)\n",
+      "Requirement already satisfied: praw in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (7.7.1)\n",
+      "Requirement already satisfied: prawcore<3,>=2.1 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from praw) (2.4.0)\n",
+      "Requirement already satisfied: update-checker>=0.18 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from praw) (0.18.0)\n",
       "Requirement already satisfied: websocket-client>=0.54.0 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from praw) (0.58.0)\n",
       "Requirement already satisfied: requests<3.0,>=2.6.0 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from prawcore<3,>=2.1->praw) (2.29.0)\n",
       "Requirement already satisfied: six in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from websocket-client>=0.54.0->praw) (1.16.0)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from requests<3.0,>=2.6.0->prawcore<3,>=2.1->praw) (2.0.4)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from requests<3.0,>=2.6.0->prawcore<3,>=2.1->praw) (3.4)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from requests<3.0,>=2.6.0->prawcore<3,>=2.1->praw) (1.26.16)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from requests<3.0,>=2.6.0->prawcore<3,>=2.1->praw) (2023.5.7)\n",
-      "Installing collected packages: update-checker, prawcore, praw\n",
-      "Successfully installed praw-7.7.1 prawcore-2.4.0 update-checker-0.18.0\n"
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from requests<3.0,>=2.6.0->prawcore<3,>=2.1->praw) (2023.5.7)\n"
      ]
     }
    ],
@@ -34,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import praw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,6 +131,277 @@
    ],
    "source": [
     "reddit.subreddit(\"all\").comments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data exploration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('./data/sentiment140.csv', encoding = \"ISO-8859-1\")\n",
+    "df.columns = ['target', 'id', 'date', 'flag', 'user', 'text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>flag</th>\n",
+       "      <th>user</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1467810672</td>\n",
+       "      <td>Mon Apr 06 22:19:49 PDT 2009</td>\n",
+       "      <td>NO_QUERY</td>\n",
+       "      <td>scotthamilton</td>\n",
+       "      <td>is upset that he can't update his Facebook by ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1467810917</td>\n",
+       "      <td>Mon Apr 06 22:19:53 PDT 2009</td>\n",
+       "      <td>NO_QUERY</td>\n",
+       "      <td>mattycus</td>\n",
+       "      <td>@Kenichan I dived many times for the ball. Man...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1467811184</td>\n",
+       "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
+       "      <td>NO_QUERY</td>\n",
+       "      <td>ElleCTF</td>\n",
+       "      <td>my whole body feels itchy and like its on fire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1467811193</td>\n",
+       "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
+       "      <td>NO_QUERY</td>\n",
+       "      <td>Karoli</td>\n",
+       "      <td>@nationwideclass no, it's not behaving at all....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1467811372</td>\n",
+       "      <td>Mon Apr 06 22:20:00 PDT 2009</td>\n",
+       "      <td>NO_QUERY</td>\n",
+       "      <td>joy_wolf</td>\n",
+       "      <td>@Kwesidei not the whole crew</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   target          id                          date      flag           user  \\\n",
+       "0       0  1467810672  Mon Apr 06 22:19:49 PDT 2009  NO_QUERY  scotthamilton   \n",
+       "1       0  1467810917  Mon Apr 06 22:19:53 PDT 2009  NO_QUERY       mattycus   \n",
+       "2       0  1467811184  Mon Apr 06 22:19:57 PDT 2009  NO_QUERY        ElleCTF   \n",
+       "3       0  1467811193  Mon Apr 06 22:19:57 PDT 2009  NO_QUERY         Karoli   \n",
+       "4       0  1467811372  Mon Apr 06 22:20:00 PDT 2009  NO_QUERY       joy_wolf   \n",
+       "\n",
+       "                                                text  \n",
+       "0  is upset that he can't update his Facebook by ...  \n",
+       "1  @Kenichan I dived many times for the ball. Man...  \n",
+       "2    my whole body feels itchy and like its on fire   \n",
+       "3  @nationwideclass no, it's not behaving at all....  \n",
+       "4                      @Kwesidei not the whole crew   "
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "target: the polarity of the tweet (0 = negative, 4 = positive)\n",
+    "\n",
+    "ids: The id of the tweet\n",
+    "\n",
+    "date: the date of the tweet\n",
+    "\n",
+    "flag: The query (lyx). If there is no query, then this value is NO_QUERY.\n",
+    "\n",
+    "user: the user that tweeted\n",
+    "\n",
+    "text: the text of the tweet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4    800000\n",
+       "0    799999\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['target'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1599999 entries, 0 to 1599998\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column  Non-Null Count    Dtype \n",
+      "---  ------  --------------    ----- \n",
+      " 0   target  1599999 non-null  int64 \n",
+      " 1   id      1599999 non-null  int64 \n",
+      " 2   date    1599999 non-null  object\n",
+      " 3   flag    1599999 non-null  object\n",
+      " 4   user    1599999 non-null  object\n",
+      " 5   text    1599999 non-null  object\n",
+      "dtypes: int64(2), object(4)\n",
+      "memory usage: 73.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking datatypes of all columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "target     int64\n",
+       "id         int64\n",
+       "date      object\n",
+       "flag      object\n",
+       "user      object\n",
+       "text      object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking for null values in dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "target    0\n",
+       "id        0\n",
+       "date      0\n",
+       "flag      0\n",
+       "user      0\n",
+       "text      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(df.isnull())"
    ]
   },
   {
