--- a/reddit.ipynb
+++ b/reddit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -114,30 +114,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "PRAWBase.parse() missing 2 required positional arguments: 'data' and 'reddit'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/priyangshupal/Documents/NYU/Big Data/event-success-prediction/reddit.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/priyangshupal/Documents/NYU/Big%20Data/event-success-prediction/reddit.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m reddit\u001b[39m.\u001b[39msubreddit(\u001b[39m\"\u001b[39m\u001b[39mall\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mcomments\u001b[39m.\u001b[39mparse()\n",
-      "\u001b[0;31mTypeError\u001b[0m: PRAWBase.parse() missing 2 required positional arguments: 'data' and 'reddit'"
+     "data": {
+      "text/plain": [
+       "Submission(id='182bpfa')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a submission to r/test\n",
+    "# reddit.subreddit(\"test\").submit(\"Test Submission by me\", url=\"https://reddit.com\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Comment(id='182bpfa')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reddit.comment(id='182bpfa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission Title: Any good Whova alternatives?\n",
+      "Submission Title: Sample of a storytelling page\n",
+      "Submission Title: How do you make a virtual social event fun?\n",
+      "Submission Title: Best event insurance?\n",
+      "Submission Title: Best Hopin Alternatives\n",
+      "Submission Title: Virtual Event Platform Features - Samaaro\n",
+      "Submission Title: Hybrid Events & Their Importance To Drive Better ROI in 2022\n",
+      "Submission Title: Best Practices From Working With World-Class Engineering Teams with Vanja Josifovski\n",
+      "Submission Title: Balloon decor, garlands and more\n",
+      "Submission Title: What was the best event you have ever been to?\n",
+      "Submission Title: What Is Gamification & Its Importance In 2022? (With Examples)\n",
+      "Submission Title: Event survived through Covid\n",
+      "Submission Title: Josh wraps up third edition of ‘World Famous’ talent hunt in Jaipur\n",
+      "Submission Title: Wedding Choreographers In Delhi\n",
+      "Submission Title: Best Virtual Trade Show Platform to Host Virtual Trade Shows - Samaaro\n",
+      "Submission Title: Event Marketing Strategies | Marketing Current Events\n",
+      "Submission Title: I DID IT PERFECTLY!! ALL 2'S BABY!!!!!\n",
+      "Submission Title: Ways to measure Success At Your Next Experiential Event\n",
+      "Submission Title: Best Virtual Exhibition Platform to Host Virtual Exhibitions - Samaaro\n",
+      "Submission Title: How to manage an engineering team\n"
      ]
     }
    ],
    "source": [
-    "reddit.subreddit(\"all\").comments"
+    "subreddit = reddit.subreddit('events')\n",
+    "for submission in subreddit.new(limit=20):\n",
+    "    print(\"Submission Title: {}\".format(submission.title))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data exploration"
+    "### Data exploration"
    ]
   },
   {
