--- a/DB_init.ipynb
+++ b/DB_init.ipynb
@@ -2,18 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "b09297f2-d974-4ec4-b3d4-12b05b0cee40",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1918528467.py, line 2)",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'MySQLdb'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    pip install sqlalchemy\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/priyangshupal/Documents/NYU/Big Data/event-success-predictor/DB_init.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/priyangshupal/Documents/NYU/Big%20Data/event-success-predictor/DB_init.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# Replace 'my_database.db' with your desired database file name\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/priyangshupal/Documents/NYU/Big%20Data/event-success-predictor/DB_init.ipynb#W0sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m database_file \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mmysql:///mysql_database.db\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/priyangshupal/Documents/NYU/Big%20Data/event-success-predictor/DB_init.ipynb#W0sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m engine \u001b[39m=\u001b[39m create_engine(database_file)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/priyangshupal/Documents/NYU/Big%20Data/event-success-predictor/DB_init.ipynb#W0sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m# Replace 'my_table_name' with your desired table name\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/priyangshupal/Documents/NYU/Big%20Data/event-success-predictor/DB_init.ipynb#W0sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m df\u001b[39m.\u001b[39mto_sql(\u001b[39m'\u001b[39m\u001b[39mmy_table_name\u001b[39m\u001b[39m'\u001b[39m, con\u001b[39m=\u001b[39mengine, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, if_exists\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mreplace\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m<string>:2\u001b[0m, in \u001b[0;36mcreate_engine\u001b[0;34m(url, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/sqlalchemy/util/deprecations.py:309\u001b[0m, in \u001b[0;36mdeprecated_params.<locals>.decorate.<locals>.warned\u001b[0;34m(fn, *args, **kwargs)\u001b[0m\n\u001b[1;32m    302\u001b[0m     \u001b[39mif\u001b[39;00m m \u001b[39min\u001b[39;00m kwargs:\n\u001b[1;32m    303\u001b[0m         _warn_with_version(\n\u001b[1;32m    304\u001b[0m             messages[m],\n\u001b[1;32m    305\u001b[0m             versions[m],\n\u001b[1;32m    306\u001b[0m             version_warnings[m],\n\u001b[1;32m    307\u001b[0m             stacklevel\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m,\n\u001b[1;32m    308\u001b[0m         )\n\u001b[0;32m--> 309\u001b[0m \u001b[39mreturn\u001b[39;00m fn(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/sqlalchemy/engine/create.py:560\u001b[0m, in \u001b[0;36mcreate_engine\u001b[0;34m(url, **kwargs)\u001b[0m\n\u001b[1;32m    558\u001b[0m         \u001b[39mif\u001b[39;00m k \u001b[39min\u001b[39;00m kwargs:\n\u001b[1;32m    559\u001b[0m             dbapi_args[k] \u001b[39m=\u001b[39m pop_kwarg(k)\n\u001b[0;32m--> 560\u001b[0m     dbapi \u001b[39m=\u001b[39m dialect_cls\u001b[39m.\u001b[39mdbapi(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mdbapi_args)\n\u001b[1;32m    562\u001b[0m dialect_args[\u001b[39m\"\u001b[39m\u001b[39mdbapi\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m dbapi\n\u001b[1;32m    564\u001b[0m dialect_args\u001b[39m.\u001b[39msetdefault(\u001b[39m\"\u001b[39m\u001b[39mcompiler_linting\u001b[39m\u001b[39m\"\u001b[39m, compiler\u001b[39m.\u001b[39mNO_LINTING)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/sqlalchemy/dialects/mysql/mysqldb.py:163\u001b[0m, in \u001b[0;36mMySQLDialect_mysqldb.dbapi\u001b[0;34m(cls)\u001b[0m\n\u001b[1;32m    161\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[1;32m    162\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdbapi\u001b[39m(\u001b[39mcls\u001b[39m):\n\u001b[0;32m--> 163\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39m__import__\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mMySQLdb\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'MySQLdb'"
      ]
     }
    ],
@@ -22,7 +38,7 @@
     "\n",
     "\n",
     "# Replace 'your_file.csv' with the path to your CSV file\n",
-    "csv_file = 'Twitter_Data.csv'\n",
+    "csv_file = './data/Twitter_Data.csv'\n",
     "df = pd.read_csv(csv_file)\n",
     "\n",
     "from sqlalchemy import create_engine\n",
@@ -40,78 +56,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fca6396f-1363-4f8f-943d-319b310779e2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting sqlalchemy\n",
-      "  Obtaining dependency information for sqlalchemy from https://files.pythonhosted.org/packages/aa/1c/0b66318368b1c9ef51c5c8560530b8ef842164e10eea08cacb06739388e0/SQLAlchemy-2.0.23-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata\n",
-      "  Downloading SQLAlchemy-2.0.23-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.6 kB)\n",
-      "Requirement already satisfied: typing-extensions>=4.2.0 in /opt/conda/envs/bigdata/lib/python3.10/site-packages (from sqlalchemy) (4.8.0)\n",
-      "Collecting greenlet!=0.4.17 (from sqlalchemy)\n",
-      "  Obtaining dependency information for greenlet!=0.4.17 from https://files.pythonhosted.org/packages/da/ab/7cc6502628565d70dce2edb619d87554d65ac4e2f17c805a5a45bfaefa5c/greenlet-3.0.1-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl.metadata\n",
-      "  Downloading greenlet-3.0.1-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl.metadata (3.7 kB)\n",
-      "Downloading SQLAlchemy-2.0.23-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m17.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading greenlet-3.0.1-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl (613 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m613.2/613.2 kB\u001b[0m \u001b[31m40.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: greenlet, sqlalchemy\n",
-      "Successfully installed greenlet-3.0.1 sqlalchemy-2.0.23\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install sqlalchemy\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "8941f7c1-b87e-42ec-91d1-db4b95e6c903",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "162980"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "# Replace 'your_file.csv' with the path to your CSV file\n",
-    "csv_file = 'Twitter_Data.csv'\n",
-    "df = pd.read_csv(csv_file)\n",
-    "\n",
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "# Replace 'my_database.db' with your desired database file name\n",
-    "database_file = 'sqlite:///my_database.db'\n",
-    "engine = create_engine(database_file)\n",
-    "\n",
-    "\n",
-    "# Replace 'my_table_name' with your desired table name\n",
-    "df.to_sql('my_table_name', con=engine, index=False, if_exists='replace')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "241b45df-67e2-4f3d-9252-2e7aab7c16a8",
    "metadata": {
     "tags": []
@@ -220,7 +164,7 @@
        "[162980 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +176,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b27b77b-a42b-4e55-b785-07c1ddc217ed",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -240,9 +183,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bigdata]",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-env-bigdata-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -254,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
