--- a/reddit.ipynb
+++ b/reddit.ipynb
@@ -2,59 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: praw in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (7.7.1)\n",
-      "Requirement already satisfied: prawcore<3,>=2.1 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from praw) (2.4.0)\n",
-      "Requirement already satisfied: update-checker>=0.18 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from praw) (0.18.0)\n",
-      "Requirement already satisfied: websocket-client>=0.54.0 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from praw) (0.58.0)\n",
-      "Requirement already satisfied: requests<3.0,>=2.6.0 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from prawcore<3,>=2.1->praw) (2.29.0)\n",
-      "Requirement already satisfied: six in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from websocket-client>=0.54.0->praw) (1.16.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from requests<3.0,>=2.6.0->prawcore<3,>=2.1->praw) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from requests<3.0,>=2.6.0->prawcore<3,>=2.1->praw) (3.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from requests<3.0,>=2.6.0->prawcore<3,>=2.1->praw) (1.26.16)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/priyangshupal/anaconda3/lib/python3.11/site-packages (from requests<3.0,>=2.6.0->prawcore<3,>=2.1->praw) (2023.5.7)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install praw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: praw\n",
-      "Version: 7.7.1\n",
-      "Summary: PRAW, an acronym for \"Python Reddit API Wrapper\", is a Python package that allows for simple access to  Reddit's API.\n",
-      "Home-page: \n",
-      "Author: Bryce Boe\n",
-      "Author-email: bbzbryce@gmail.com\n",
-      "License: Simplified BSD License\n",
-      "Location: /Users/priyangshupal/anaconda3/lib/python3.11/site-packages\n",
-      "Requires: prawcore, update-checker, websocket-client\n",
-      "Required-by: \n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip show praw"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -200,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,12 +158,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('./data/sentiment140.csv', encoding = \"ISO-8859-1\")\n",
     "df.columns = ['target', 'id', 'date', 'flag', 'user', 'text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1599999, 6)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4    800000\n",
+       "0    799999\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['target'].value_counts()"
    ]
   },
   {
@@ -464,10 +453,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df1 = pd.read_csv('./data/Twitter_Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 1.0    72250\n",
+       " 0.0    55213\n",
+       "-1.0    35510\n",
+       "Name: category, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['category'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>clean_text</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130448</th>\n",
+       "      <td>the foundation stone northeast gas grid inaugu...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155642</th>\n",
+       "      <td>dear terrorists you can run but you cant hide ...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155698</th>\n",
+       "      <td>offense the best defence with mission shakti m...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155770</th>\n",
+       "      <td>have always heard politicians backing out thei...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158693</th>\n",
+       "      <td>modi government plans felicitate the faceless ...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158694</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159442</th>\n",
+       "      <td>chidambaram gives praises modinomics</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159443</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160559</th>\n",
+       "      <td>the reason why modi contested from seats 2014 ...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160560</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               clean_text  category\n",
+       "148                                                   NaN       0.0\n",
+       "130448  the foundation stone northeast gas grid inaugu...       NaN\n",
+       "155642  dear terrorists you can run but you cant hide ...       NaN\n",
+       "155698  offense the best defence with mission shakti m...       NaN\n",
+       "155770  have always heard politicians backing out thei...       NaN\n",
+       "158693  modi government plans felicitate the faceless ...       NaN\n",
+       "158694                                                NaN      -1.0\n",
+       "159442               chidambaram gives praises modinomics       NaN\n",
+       "159443                                                NaN       0.0\n",
+       "160559  the reason why modi contested from seats 2014 ...       NaN\n",
+       "160560                                                NaN       1.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1[df1['clean_text'].isnull() | df1['category'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df1[(df1['category'] == -1) | (df1['category'] == 1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.to_csv('./data/Twitter_Data2.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 1.0    72250\n",
+       "-1.0    35510\n",
+       "Name: category, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['category'].value_counts()"
+   ]
   }
  ],
  "metadata": {
