Data preparation till lemmatizing

--- a/code/data-exploration.ipynb
+++ b/code/data-exploration.ipynb
@@ -18,11 +18,7 @@
    "source": [
     "import pyspark\n",
     "import pyspark.sql.functions as F\n",
-    "import pyspark.sql.types as T\n",
-    "import seaborn as sns\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pyspark.sql.types as T"
    ]
   },
   {
@@ -586,13 +582,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
     "sentiment140_spark = sentiment140_spark\\\n",
     "  .withColumn('label', F.lit(common_label_transform_udf(F.col('target'), F.lit(\"0\"), F.lit(\"4\"))))\\\n",
-    "  .select(['date', 'text', 'label'])"
+    "  .select(['text', 'label'])"
    ]
   },
   {
@@ -606,12 +602,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
     "# twitter_data.toPandas().to_csv('../data-processed/Twitter_Data.csv')\n",
-    "sentiment140 = sentiment140_spark.toPandas()"
+    "sentiment140 = sentiment140_spark.toPandas().to_csv('../data-processed/sentiment140_data.csv')"
    ]
   }
  ],
