Removing test_set

--- a/code/model.ipynb
+++ b/code/model.ipynb
@@ -519,15 +519,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_set = sentiment140[:1000]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -545,7 +536,7 @@
     }
    ],
    "source": [
-    "test_set['text'] = test_set['text'].apply(lambda line: removeStopwords(line))"
+    "sentiment140['text'] = sentiment140['text'].apply(lambda line: removeStopwords(line))"
    ]
   },
   {
@@ -623,7 +614,7 @@
     }
    ],
    "source": [
-    "test_set.head()"
+    "sentiment140.head()"
    ]
   },
   {
@@ -695,7 +686,7 @@
     }
    ],
    "source": [
-    "test_set['text'] = test_set['text'].apply(lambda line: remove_punctuations(line))"
+    "sentiment140['text'] = sentiment140['text'].apply(lambda line: remove_punctuations(line))"
    ]
   },
   {
@@ -773,7 +764,7 @@
     }
    ],
    "source": [
-    "test_set.head()"
+    "sentiment140.head()"
    ]
   },
   {
@@ -850,9 +841,9 @@
     }
    ],
    "source": [
-    "test_set['text'] = test_set['text'].apply(lambda line: remove_urls(line))\n",
-    "test_set['text'] = test_set['text'].apply(lambda line: remove_usernames(line))\n",
-    "test_set['text'] = test_set['text'].apply(lambda line: remove_emojis(line))"
+    "sentiment140['text'] = sentiment140['text'].apply(lambda line: remove_urls(line))\n",
+    "sentiment140['text'] = sentiment140['text'].apply(lambda line: remove_usernames(line))\n",
+    "sentiment140['text'] = sentiment140['text'].apply(lambda line: remove_emojis(line))"
    ]
   },
   {
@@ -930,7 +921,7 @@
     }
    ],
    "source": [
-    "test_set.head()"
+    "sentiment140.head()"
    ]
   },
   {
@@ -977,7 +968,7 @@
     }
    ],
    "source": [
-    "test_set['text'] = test_set['text'].apply(tokenizer.tokenize)"
+    "sentiment140['text'] = sentiment140['text'].apply(tokenizer.tokenize)"
    ]
   },
   {
@@ -1055,7 +1046,7 @@
     }
    ],
    "source": [
-    "test_set.head()"
+    "sentiment140.head()"
    ]
   },
   {
@@ -1121,7 +1112,7 @@
     }
    ],
    "source": [
-    "test_set['text'] = test_set['text'].apply(lambda line: stemming(line))"
+    "sentiment140['text'] = sentiment140['text'].apply(lambda line: stemming(line))"
    ]
   },
   {
@@ -1199,7 +1190,7 @@
     }
    ],
    "source": [
-    "test_set.head()"
+    "sentiment140.head()"
    ]
   },
   {
@@ -1272,7 +1263,7 @@
     }
    ],
    "source": [
-    "test_set['text'] = test_set['text'].apply(lambda x: lemmatize(x))"
+    "sentiment140['text'] = sentiment140['text'].apply(lambda x: lemmatize(x))"
    ]
   }
  ],
