Using big data notebook for data exploration

--- a/code/data-exploration.ipynb
+++ b/code/data-exploration.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5136efee-3059-4670-9bf1-bbc4aa44c724",
    "metadata": {},
    "source": [
     "#### This notebook contains all the exploration steps run on raw data before it is ready to ingest into a database"
@@ -9,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "94169110-df75-47b7-9fc7-3ad0dd8238e8",
+   "execution_count": 1,
+   "id": "b83a30ce-5bb5-4f05-8c7b-c607d6430151",
    "metadata": {
     "tags": []
    },
@@ -18,13 +19,14 @@
    "source": [
     "import pyspark\n",
     "import pyspark.sql.functions as F\n",
-    "import pyspark.sql.types as T"
+    "import pyspark.sql.types as T\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f1518624-66c2-44d0-93f8-162014517fb0",
+   "id": "5e13883f-369c-419b-b3bb-bf44a75198f8",
    "metadata": {
     "tags": []
    },
@@ -35,8 +37,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/11/26 17:21:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/11/26 17:21:47 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "23/12/03 14:00:02 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "/Users/priyangshupal/anaconda3/lib/python3.11/site-packages/pyspark/sql/context.py:157: FutureWarning: Deprecated in 3.0.0. Use SparkSession.builder.getOrCreate() instead.\n",
       "  warnings.warn(\n"
      ]
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "176fcb5b-d24d-4943-b866-1a4ead4b1be6",
+   "id": "75704e5c-b246-4e16-b445-5428d9e0a3d5",
    "metadata": {},
    "source": [
     "### Twitter Dataset"
@@ -62,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "958ede6c-a779-4720-b7f3-bed859b08c9c",
+   "id": "fa0fd85c-5a12-4b65-a493-044976cd57be",
    "metadata": {
     "tags": []
    },
@@ -74,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "717b21ab-6168-423b-8c56-e76d10fd06c2",
+   "id": "50863457-e3ad-4d75-9698-2e8accf47575",
    "metadata": {
     "tags": []
    },
@@ -97,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6b621964-762e-4b5e-81d9-a5a07337d769",
+   "id": "f5072557-a6bc-421e-81a6-902c1129f4ce",
    "metadata": {
     "tags": []
    },
@@ -137,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "405ac7ec-1cd9-4b23-94cc-1a66289dd40a",
+   "id": "958926c9-4029-443b-bb46-a673d2715dc6",
    "metadata": {
     "tags": []
    },
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30ec6dbf-24e6-4c3f-b06b-fac13c9a1ba1",
+   "id": "7813d20f-c977-475a-9908-0022d15e4fcc",
    "metadata": {},
    "source": [
     "Checking for NULL rows"
@@ -157,6 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "4032c40c-aae8-43f4-893f-e41b6a3009fb",
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +178,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3afa0054-e4c7-4ee5-a1bc-7e8a339af8be",
    "metadata": {},
    "source": [
     "Removing NULL rows"
@@ -184,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4019ab5d-3cb2-4c6b-995b-1aac6411274f",
+   "id": "30304a2e-d61a-47c6-9503-08596f0c4236",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "135f87f9-55fa-4c1a-b29a-e6d9346730d8",
+   "id": "0918b412-5bdb-42d4-9f1c-52f3a524614d",
    "metadata": {},
    "source": [
     "This DataFrame has 2 categories:\n",
@@ -205,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "88799538-8b77-4f0c-8794-75a856e66acb",
+   "id": "b31def17-b7a1-4d40-852a-8800a92b3966",
    "metadata": {
     "tags": []
    },
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "209a6655-cdda-41b5-b0e7-be73e7b5b3b3",
+   "id": "c1c705fc-5109-42f3-b312-369be83b0580",
    "metadata": {},
    "source": [
     "### Sentiment140 Dataset"
@@ -238,9 +241,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "id": "c5952828-aff6-4558-a595-b54fede2fa4c",
-   "metadata": {},
+   "execution_count": 4,
+   "id": "ec395a7a-d575-4ddc-ac6b-18e43a82aca9",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "sentiment140Schema = T.StructType([\n",
@@ -256,8 +261,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "id": "4fa2e30b-cb9b-4ce0-b259-b020452838bf",
+   "execution_count": 5,
+   "id": "4f659de7-1450-4304-a9e2-7d886cf6e0a6",
    "metadata": {
     "tags": []
    },
@@ -282,7 +287,7 @@
        "['target', 'id', 'date', 'flag', 'user', 'text']"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
+   "id": "dcdb8892-b7aa-4d8d-a3ee-ca41ee0ab0df",
    "metadata": {},
    "outputs": [
     {
@@ -326,6 +332,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "21cfdc08-f8e5-476f-9c38-78ddb3b9aed0",
    "metadata": {},
    "source": [
     "The columns ```id``` and ```user``` do not hold any such information that the mode can learn. So these columns can be dropped.\n",
@@ -335,7 +342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 7,
+   "id": "b4a0d7c8-d0dd-4355-9d58-581948c1db8b",
    "metadata": {},
    "outputs": [
     {
@@ -357,6 +365,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "41f1d55c-6177-413e-b408-b89ad8321cc2",
    "metadata": {},
    "source": [
     "Since there is only one unique entry in this column, our model cannot learn anything from this column. So we can drop this column"
@@ -364,7 +373,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 8,
+   "id": "fbc409a1-6a86-454c-bd4c-8d9ede978ad7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 9,
+   "id": "77da2333-bc03-40ce-9609-409888da5863",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +393,7 @@
        "['target', 'date', 'text']"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,6 +404,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db022607-e6c0-41e7-9092-296ebeb1e3bf",
    "metadata": {},
    "source": [
     "We will modify the ```date``` field to hold date time values that can be parsed easily"
@@ -400,7 +412,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 10,
+   "id": "7673d79f-5114-473d-b559-dbe138c43010",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +422,7 @@
        "'Mon Apr 06 22:19:45 PDT 2009'"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,6 +433,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af33398a-e63c-4e89-94f3-ec66e262dcfa",
    "metadata": {},
    "source": [
     "Creating UDF to transform the ```date``` column"
@@ -427,7 +441,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 11,
+   "id": "2b4231bb-64c7-4f1e-a45a-f2728d99276b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +451,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 12,
+   "id": "162f5092-2a20-4576-82db-5da46f9aa6a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +462,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 13,
+   "id": "546fa6b1-2b4c-4435-ab89-24b0d32cff2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +481,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 14,
+   "id": "b2a73c8f-2956-4b28-87bc-a2c87bf1dcf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +492,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 15,
+   "id": "e64d8634-08d1-4913-9998-577c630fab6f",
    "metadata": {},
    "outputs": [
     {
@@ -506,6 +525,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9bdf9c9d-7ba7-42e4-9f40-98ca0dd91be6",
    "metadata": {},
    "source": [
     "Now the dataframe has properly formatted date.\n",
@@ -515,8 +535,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "id": "a995eed8-60cc-4bc0-8305-f59f5e94f0e1",
+   "execution_count": 16,
+   "id": "f1c61260-322b-4514-b1ff-d7d9350e6ce5",
    "metadata": {
     "tags": []
    },
@@ -541,6 +561,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "493a15ef-1086-43a3-b237-959a9aac39dd",
    "metadata": {},
    "source": [
     "This DataFrame has equal number of occurences of the 2 categories:\n",
@@ -551,6 +572,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "efb9eec2-53ee-4d72-9352-6f87de495565",
    "metadata": {},
    "source": [
     "We will have common labels across dataframes $\\rightarrow 0$ will signify negative sentiment and $1$ will signify positive sentiment\n",
@@ -560,7 +582,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
+   "id": "10ab1c26-7f2f-45f6-b4dc-99221677d784",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +594,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
+   "id": "c275fc4a-7abd-4d92-89ed-0e91f8b6cdb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 19,
+   "id": "da225aa6-5e37-4318-be26-8205b3717ce9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,9 +618,10 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3003aa2a-42ff-4c8c-bef2-df3f73e238bf",
    "metadata": {},
    "source": [
-    "Export all the preprocessed spark dataframes into database \n",
+    "Export all the preprocessed spark dataframes into database - here, we are using MongoDb\n",
     "\n",
     "Storing in csv files for now $\\rightarrow$ (create the folder ```data-processed``` if it is not present)"
    ]
@@ -603,6 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
+   "id": "5ebf5389-ada3-4211-8241-ace69049c547",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +640,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
