--- a/code/data-exploration.ipynb
+++ b/code/data-exploration.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5e13883f-369c-419b-b3bb-bf44a75198f8",
    "metadata": {
     "tags": []
@@ -37,7 +37,8 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/12/03 14:00:02 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/12/03 23:13:06 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/12/03 23:13:07 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
       "/Users/priyangshupal/anaconda3/lib/python3.11/site-packages/pyspark/sql/context.py:157: FutureWarning: Deprecated in 3.0.0. Use SparkSession.builder.getOrCreate() instead.\n",
       "  warnings.warn(\n"
      ]
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "ec395a7a-d575-4ddc-ac6b-18e43a82aca9",
    "metadata": {
     "tags": []
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "4f659de7-1450-4304-a9e2-7d886cf6e0a6",
    "metadata": {
     "tags": []
@@ -287,7 +288,7 @@
        "['target', 'id', 'date', 'flag', 'user', 'text']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "dcdb8892-b7aa-4d8d-a3ee-ca41ee0ab0df",
    "metadata": {},
    "outputs": [
@@ -342,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "b4a0d7c8-d0dd-4355-9d58-581948c1db8b",
    "metadata": {},
    "outputs": [
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "fbc409a1-6a86-454c-bd4c-8d9ede978ad7",
    "metadata": {},
    "outputs": [],
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "77da2333-bc03-40ce-9609-409888da5863",
    "metadata": {},
    "outputs": [
@@ -393,7 +394,7 @@
        "['target', 'date', 'text']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "7673d79f-5114-473d-b559-dbe138c43010",
    "metadata": {},
    "outputs": [
@@ -422,7 +423,7 @@
        "'Mon Apr 06 22:19:45 PDT 2009'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "2b4231bb-64c7-4f1e-a45a-f2728d99276b",
    "metadata": {},
    "outputs": [],
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "162f5092-2a20-4576-82db-5da46f9aa6a9",
    "metadata": {},
    "outputs": [],
@@ -462,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "546fa6b1-2b4c-4435-ab89-24b0d32cff2f",
    "metadata": {},
    "outputs": [],
@@ -481,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "b2a73c8f-2956-4b28-87bc-a2c87bf1dcf1",
    "metadata": {},
    "outputs": [],
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "e64d8634-08d1-4913-9998-577c630fab6f",
    "metadata": {},
    "outputs": [
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "f1c61260-322b-4514-b1ff-d7d9350e6ce5",
    "metadata": {
     "tags": []
@@ -582,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "10ab1c26-7f2f-45f6-b4dc-99221677d784",
    "metadata": {},
    "outputs": [],
@@ -594,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "c275fc4a-7abd-4d92-89ed-0e91f8b6cdb4",
    "metadata": {},
    "outputs": [],
@@ -606,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "da225aa6-5e37-4318-be26-8205b3717ce9",
    "metadata": {},
    "outputs": [],
@@ -628,13 +629,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 25,
    "id": "5ebf5389-ada3-4211-8241-ace69049c547",
    "metadata": {},
    "outputs": [],
    "source": [
     "# twitter_data.toPandas().to_csv('../data-processed/Twitter_Data.csv')\n",
-    "sentiment140 = sentiment140_spark.toPandas().to_csv('../data-processed/sentiment140_data.csv')"
+    "# sentiment140 = sentiment140_spark.toPandas().to_csv('../data-processed/sentiment140_data.csv')"
    ]
   }
  ],
