Adding model metrics

--- a/code/data-preparation.ipynb
+++ b/code/data-preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "4017c48d-49d8-45a0-990c-833224419912",
    "metadata": {
     "tags": []
@@ -17,23 +17,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "fc756c81-6159-4e4b-ae3c-929b378df747",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Spark context already exists, continuing with <SparkContext master=local[*] appName=pyspark-shell>\n"
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/12/06 14:50:08 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "/Users/priyangshupal/anaconda3/lib/python3.11/site-packages/pyspark/sql/context.py:157: FutureWarning: Deprecated in 3.0.0. Use SparkSession.builder.getOrCreate() instead.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
     "conf = pyspark.SparkConf()\n",
-    "conf.set('spark.ui.proxyBase', '/user/' + os.environ['JUPYTERHUB_USER'] + '/proxy/4041')\n",
+    "# conf.set('spark.ui.proxyBase', '/user/' + os.environ['JUPYTERHUB_USER'] + '/proxy/4041')\n",
     "conf.set('spark.driver.memory','8g')\n",
     "conf.set('spark.ui.showConsoleProgress', False)\n",
     "try:\n",
@@ -45,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "45b471ad-0e6f-44a9-8e71-a94017fbe138",
    "metadata": {
     "tags": []
@@ -58,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "c9facc66-6177-4c49-931a-eaf6bc81f7b5",
    "metadata": {
     "tags": []
@@ -81,18 +85,8 @@
       "|@KeepinUpWKris I ...|    1|\n",
       "|@tommcfly ah, con...|    1|\n",
       "|@e4VoIP I RESPOND...|    1|\n",
-      "|crazy day of scho...|    1|\n",
-      "|@naughtyhaughty H...|    1|\n",
-      "|@nileyjileyluver ...|    1|\n",
-      "|@soundwav2010 At ...|    1|\n",
-      "|@LutheranLucciol ...|    1|\n",
-      "|Just added tweeti...|    1|\n",
-      "|@michellardi i re...|    1|\n",
-      "|@nicolerichie: yo...|    1|\n",
-      "|Catching Up on Em...|    1|\n",
-      "|Dancing around th...|    1|\n",
       "+--------------------+-----+\n",
-      "only showing top 20 rows\n",
+      "only showing top 10 rows\n",
       "\n"
      ]
     }
@@ -134,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "709559a0-5aec-4235-a010-67784ea9f99b",
    "metadata": {
     "tags": []
@@ -146,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "f9218b97-1998-4e25-8460-d83724b81194",
    "metadata": {
     "tags": []
@@ -189,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "a0d945a9-e199-4730-85aa-7dc8e20ea65d",
    "metadata": {
     "tags": []
@@ -199,7 +193,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to /home/jovyan/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/priyangshupal/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
@@ -209,7 +204,7 @@
        "True"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "45383729-5b95-43a5-b352-5e669e523782",
    "metadata": {
     "tags": []
@@ -233,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "8b072b17-de36-4045-a5f7-7de19d56581c",
    "metadata": {
     "tags": []
@@ -245,7 +240,7 @@
        "['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', \"you're\"]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "f8c36502-cc91-4f20-996c-6c9382c85af7",
    "metadata": {
     "tags": []
@@ -271,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "4e16a281-41fe-4038-9907-7957e13291d8",
    "metadata": {
     "tags": []
@@ -283,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "b26473bd-bbe4-4708-a667-7efe27edb25f",
    "metadata": {
     "tags": []
@@ -326,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "id": "c0bc753e-2eae-436d-b848-c5ba0230c0d1",
    "metadata": {},
    "outputs": [],
@@ -336,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "id": "ed4ec634-cbe0-4383-abec-7d9d4e188923",
    "metadata": {},
    "outputs": [
@@ -346,7 +341,7 @@
        "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "id": "4ec52a0d-8bbf-4499-9417-05735170dcb4",
    "metadata": {
     "tags": []
@@ -376,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "id": "9e696b29-67c2-4ef8-95da-a60edc96ade6",
    "metadata": {
     "tags": []
@@ -388,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "id": "05c6f3a3-9364-441d-bdf7-35d29d700430",
    "metadata": {
     "tags": []
@@ -431,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "id": "a47041df-af41-4b28-b046-962614db04f7",
    "metadata": {
     "tags": []
@@ -444,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "id": "55fef8ee-53d4-440b-bc3a-921f1a717a2e",
    "metadata": {
     "tags": []
@@ -457,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "id": "6125183f-2ad8-49d1-82fc-55fbf81d661b",
    "metadata": {
     "tags": []
@@ -480,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 23,
    "id": "749cca71-0c7e-4d04-aaa0-a7b4a1880c30",
    "metadata": {
     "tags": []
@@ -502,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "id": "1f759df8-699d-47ea-81b0-16aab26f774c",
    "metadata": {
     "tags": []
@@ -515,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 25,
    "id": "78bce0f1-68b1-4b66-b28a-85bebfe2d062",
    "metadata": {
     "tags": []
@@ -541,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "id": "cf32e8c2-650e-4d79-b0b5-bbeaff330d75",
    "metadata": {
     "tags": []
@@ -553,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 27,
    "id": "f66ec521-11c2-4348-823a-90bfdd479926",
    "metadata": {
     "tags": []
@@ -596,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "35c632ae-cad4-4f05-8529-f6623f9d08f1",
    "metadata": {
     "tags": []
@@ -608,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "id": "cf5c8f23-91a3-4df9-9996-d2d23bf3dd85",
    "metadata": {
     "tags": []
@@ -628,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "id": "61262880-7b53-4117-bf2f-842f6bf8443a",
    "metadata": {
     "tags": []
