--- a/code/model-implementation.ipynb
+++ b/code/model-implementation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "3af8f052-6459-414e-8cce-c0162bcb31ef",
    "metadata": {
     "tags": []
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 103,
    "id": "fba9da0f-7aad-4aa7-a6c4-8136954b58eb",
    "metadata": {
     "tags": []
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "id": "077379ae-6938-4117-a441-c0d51fd702c6",
    "metadata": {
     "tags": []
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 105,
    "id": "a9423099-7021-45df-8ad2-2aafdb1efec1",
    "metadata": {
     "tags": []
@@ -127,7 +127,7 @@
        "4                      lovesbrooklyn2 effect everyon     1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 106,
    "id": "f7570f3c-0261-4820-aae2-5d326dac5b09",
    "metadata": {
     "tags": []
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 107,
    "id": "082728b4-0ff0-46f3-85e4-566065c0ccbf",
    "metadata": {
     "tags": []
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 108,
    "id": "e72e9846-69d7-4a4e-af4a-000b1c443506",
    "metadata": {
     "tags": []
@@ -185,31 +185,37 @@
    "outputs": [],
    "source": [
     "start_time_sklearn = time.time()\n",
-    "model_sklearn = LogisticRegression(random_state=42, max_iter=100).fit(Xtr.astype(int), ytr)\n",
+    "model_sklearn = LogisticRegression(random_state=42, max_iter=100).fit(Xtr.astype(int), ytr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yhat = model_sklearn.predict(Xts.astype(int))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "time_sklearn = time.time() - start_time_sklearn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 111,
    "id": "8c651d8b-246d-4b95-8270-abf85002821f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.37333333333333335"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mean_squared_error(yts, model_sklearn.predict(Xts.astype(int)))"
+    "mse_sklearn = mean_squared_error(yts, yhat)"
    ]
   },
   {
@@ -222,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 112,
    "id": "8f3f0a27-c292-4aab-b873-7214d350649b",
    "metadata": {
     "tags": []
@@ -240,28 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 113,
    "id": "2cd4aa52-6969-4cae-983b-16dd46ed94dd",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/12/06 14:29:33 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/12/06 14:29:37 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "/opt/conda/envs/bigdata/lib/python3.10/site-packages/pyspark/sql/context.py:158: FutureWarning: Deprecated in 3.0.0. Use SparkSession.builder.getOrCreate() instead.\n",
-      "  warnings.warn(\n"
+      "Spark context already exists, continuing with <SparkContext master=local[*] appName=pyspark-shell>\n"
      ]
     }
    ],
    "source": [
     "conf = pyspark.SparkConf()\n",
-    "conf.set('spark.ui.proxyBase', '/user/' + os.environ['JUPYTERHUB_USER'] + '/proxy/4041')\n",
+    "# conf.set('spark.ui.proxyBase', '/user/' + os.environ['JUPYTERHUB_USER'] + '/proxy/4041')\n",
     "conf.set('spark.driver.memory','8g')\n",
     "conf.set('spark.ui.showConsoleProgress', False)\n",
     "try:\n",
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 114,
    "id": "5064d98f-e727-4a5a-94ad-4e3589a47d8a",
    "metadata": {
     "tags": []
@@ -293,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 115,
    "id": "03341e4b-9b3f-47a8-ab37-4564925a9527",
    "metadata": {
     "tags": []
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 116,
    "id": "4c56de1d-25b3-4012-8067-650fc637b198",
    "metadata": {
     "tags": []
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 117,
    "id": "f0f0104e-5019-4733-a1ce-369f5c87c192",
    "metadata": {
     "tags": []
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 118,
    "id": "d48f0a5e-b48e-4592-bb2a-bb28a2cfda9f",
    "metadata": {
     "tags": []
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 119,
    "id": "da86dc0f-bc00-4309-beda-41a01e93775a",
    "metadata": {
     "tags": []
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 120,
    "id": "09eba89d-29be-44dd-85fc-0a730c25cd8f",
    "metadata": {
     "tags": []
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 121,
    "id": "da2331ca-6a81-41bc-845f-f1e85243fbd7",
    "metadata": {
     "tags": []
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 122,
    "id": "2deb1059-90d9-4b5f-8b3f-779af5d0e5a6",
    "metadata": {
     "tags": []
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 123,
    "id": "29ef2205-685d-4736-b8ed-650187ed2c37",
    "metadata": {
     "tags": []
@@ -420,13 +421,12 @@
    "outputs": [],
    "source": [
     "start_time_pyspark = time.time()\n",
-    "model_fitted_pyspark = model_pyspark.fit(train)\n",
-    "time_pyspark = start_time_pyspark - time.time()"
+    "model_fitted_pyspark = model_pyspark.fit(train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 124,
    "id": "a94aaa46-7dc9-4c4a-852b-5c1e8649ec37",
    "metadata": {
     "tags": []
@@ -438,7 +438,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_pyspark = time.time() - start_time_pyspark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
    "id": "14fe4989-02f4-4a85-9a62-a6e306662030",
    "metadata": {
     "tags": []
@@ -475,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 127,
    "id": "1ead663c-4d0f-469a-a23b-06f08f8441bf",
    "metadata": {
     "tags": []
@@ -483,38 +492,57 @@
    "outputs": [],
    "source": [
     "evaluator = RegressionEvaluator(predictionCol='prediction', labelCol='label', metricName='mse')\n",
-    "mse_spark = evaluator.evaluate(model_predicted_pyspark)"
+    "mse_pyspark = evaluator.evaluate(model_predicted_pyspark)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comparing the performance of models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "2a2d1a2a-0698-4e39-90ce-06a931407839",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tabulate import tabulate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.421875"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model type      Training and inference time    Mean Squared Error\n",
+      "------------  -----------------------------  --------------------\n",
+      "Sklearn                           0.0217271              0.373333\n",
+      "PySpark                           0.881626               0.421875\n"
+     ]
     }
    ],
    "source": [
-    "mse_spark"
+    "print(\n",
+    "  tabulate(\n",
+    "    [['Sklearn', time_sklearn, mse_sklearn],\n",
+    "    ['PySpark', time_pyspark, mse_pyspark]],\n",
+    "    headers=['Model type', 'Training and inference time', 'Mean Squared Error']\n",
+    "  )\n",
+    ")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bigdata]",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-env-bigdata-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -526,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
