Removing Dask implementation of model

--- a/code/model-implementation.ipynb
+++ b/code/model-implementation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "id": "3af8f052-6459-414e-8cce-c0162bcb31ef",
    "metadata": {
     "tags": []
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "id": "fba9da0f-7aad-4aa7-a6c4-8136954b58eb",
    "metadata": {
     "tags": []
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "id": "077379ae-6938-4117-a441-c0d51fd702c6",
    "metadata": {
     "tags": []
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "id": "a9423099-7021-45df-8ad2-2aafdb1efec1",
    "metadata": {
     "tags": []
@@ -127,7 +127,7 @@
        "4                      lovesbrooklyn2 effect everyon     1"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "id": "f7570f3c-0261-4820-aae2-5d326dac5b09",
    "metadata": {
     "tags": []
@@ -159,8 +159,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training the model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "id": "082728b4-0ff0-46f3-85e4-566065c0ccbf",
    "metadata": {
     "tags": []
@@ -177,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "id": "e72e9846-69d7-4a4e-af4a-000b1c443506",
    "metadata": {
     "tags": []
@@ -190,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "id": "8c651d8b-246d-4b95-8270-abf85002821f",
    "metadata": {
     "tags": []
@@ -228,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 11,
    "id": "8f3f0a27-c292-4aab-b873-7214d350649b",
    "metadata": {
     "tags": []
@@ -246,17 +253,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "id": "2cd4aa52-6969-4cae-983b-16dd46ed94dd",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Spark context already exists, continuing with <SparkContext master=local[*] appName=pyspark-shell>\n"
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/12/10 18:17:50 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "/Users/priyangshupal/anaconda3/lib/python3.11/site-packages/pyspark/sql/context.py:157: FutureWarning: Deprecated in 3.0.0. Use SparkSession.builder.getOrCreate() instead.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -274,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 13,
    "id": "5064d98f-e727-4a5a-94ad-4e3589a47d8a",
    "metadata": {
     "tags": []
@@ -294,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 14,
    "id": "03341e4b-9b3f-47a8-ab37-4564925a9527",
    "metadata": {
     "tags": []
@@ -306,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 15,
    "id": "4c56de1d-25b3-4012-8067-650fc637b198",
    "metadata": {
     "tags": []
@@ -318,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 16,
    "id": "f0f0104e-5019-4733-a1ce-369f5c87c192",
    "metadata": {
     "tags": []
@@ -330,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 17,
    "id": "d48f0a5e-b48e-4592-bb2a-bb28a2cfda9f",
    "metadata": {
     "tags": []
@@ -342,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 18,
    "id": "da86dc0f-bc00-4309-beda-41a01e93775a",
    "metadata": {
     "tags": []
@@ -354,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 19,
    "id": "09eba89d-29be-44dd-85fc-0a730c25cd8f",
    "metadata": {
     "tags": []
@@ -388,8 +399,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training the model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 20,
    "id": "da2331ca-6a81-41bc-845f-f1e85243fbd7",
    "metadata": {
     "tags": []
@@ -401,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 21,
    "id": "2deb1059-90d9-4b5f-8b3f-779af5d0e5a6",
    "metadata": {
     "tags": []
@@ -413,12 +431,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 22,
    "id": "29ef2205-685d-4736-b8ed-650187ed2c37",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/12/10 18:17:56 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.blas.JNIBLAS\n"
+     ]
+    }
+   ],
    "source": [
     "start_time_pyspark = time.time()\n",
     "model_fitted_pyspark = model_pyspark.fit(train)"
@@ -426,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 23,
    "id": "a94aaa46-7dc9-4c4a-852b-5c1e8649ec37",
    "metadata": {
     "tags": []
@@ -438,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 25,
    "id": "14fe4989-02f4-4a85-9a62-a6e306662030",
    "metadata": {
     "tags": []
@@ -484,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 26,
    "id": "1ead663c-4d0f-469a-a23b-06f08f8441bf",
    "metadata": {
     "tags": []
@@ -504,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -522,8 +548,8 @@
      "text": [
       "Model type      Training and inference time    Mean Squared Error\n",
       "------------  -----------------------------  --------------------\n",
-      "Sklearn                           0.0217271              0.373333\n",
-      "PySpark                           0.881626               0.421875\n"
+      "Sklearn                           0.0479972              0.373333\n",
+      "PySpark                           2.99101                0.421875\n"
      ]
     }
    ],
